<resources>
    <string name="app_name">Rate Guide</string>

    <string name="big_and_small">Бигмаркеты и Смоллмаркеты</string>
    <string name="value_bets">Валуйные ставки</string>
    <string name="willful_victory">Волевая победа</string>
    <string name="assist">Голевая передача</string>
    <string name="double_chance_12">Двойной шанс 12</string>
    <string name="long_term">Долгосрочные</string>
    <string name="individual">Индивидуальные</string>
    <string name="individual_total">Индивидуальный тотал</string>
    <string name="coefficient">Коэффициенты</string>
    <string name="cashout">Кэшаут</string>
    <string name="margin">Маржа</string>
    <string name="on_out">На исход</string>
    <string name="on_corridor">На коридор</string>
    <string name="to_statistics">На статистику</string>
    <string name="both_to_score">Обе забьют</string>
    <string name="ordinaries">Ординары</string>
    <string name="load_line">Прогруз линии</string>
    <string name="system">Система</string>
    <string name="total">Тотал</string>
    <string name="total_three_way">Тотал трехпутевый</string>
    <string name="handicap">Фора</string>
    <string name="express">Экспресс</string>

    <string name="terms">Термины</string>

    <string name="surebets">Вилки в букмекерских ставках</string>
    <string name="catch_up">Догон в ставках на спорт</string>
    <string name="even_odd">Чет/нечет в ставках на спорт</string>
    <string name="corridor">Коридор в ставках</string>
    <string name="yellow_cards">Желтые карточки</string>
    <string name="martingale">Стратегия Мартингейла в ставках – удвоение</string>
    <string name="penalty">Пенальти</string>
    <string name="ladder">Лесенка в ставках на спорт</string>

    <string name="strategy_bets">Стратегии ставок</string>
    <string name="types_bets">Виды ставок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="notifications">Уведомления</string>


</resources>