<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/teal"
    tools:context=".presentation.main.MainFragment">

    <Button
        android:id="@+id/btStrategy"
        style="@style/Theme.RateGuide.ButtonTypesMain"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/strategy_bets"
        app:layout_constraintBottom_toTopOf="@+id/btTypes"
        app:layout_constraintStart_toStartOf="@+id/btTypes" />

    <Button
        android:id="@+id/btTypes"
        style="@style/Theme.RateGuide.ButtonTypesMain"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/types_bets"
        app:layout_constraintBottom_toTopOf="@+id/bt_terms"
        app:layout_constraintStart_toStartOf="@+id/bt_terms" />

    <Button
        android:id="@+id/bt_terms"
        style="@style/Theme.RateGuide.ButtonTypesMain"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="130dp"
        android:text="@string/terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgMoney"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toTopOf="@+id/btStrategy"
        app:layout_constraintStart_toStartOf="@+id/btStrategy"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imgBtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>